<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/paleturquoise"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num1"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/eNum1"
            android:layout_width="200dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="0"
            android:background="@color/white"
            android:layout_margin="20dp"
            android:inputType="numberDecimal|numberSigned"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num2"
                android:textSize="20dp"/>
        <EditText
            android:id="@+id/eNum2"
            android:layout_width="200dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="0"
            android:background="@color/white"
            android:layout_margin="20dp"
            android:inputType="numberDecimal|numberSigned"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RadioGroup
            android:id="@+id/radioOperacionGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >


            <RadioButton
                android:id="@+id/Rsuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/suma"
                android:checked="true"
                android:textSize="20dp"
                >

            </RadioButton>
            <RadioButton
                android:id="@+id/Rresta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/resta"
                android:textSize="20dp">
            </RadioButton>
            <RadioButton
                android:id="@+id/Rmultiplica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/multiplica"
                android:textSize="20dp">
            </RadioButton>
            <RadioButton
                android:id="@+id/Rdivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/divide"
                android:textSize="20dp">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/calcular"
            android:layout_margin="20dp"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/Tresult"
            android:layout_width="150dp"
            android:text="   --"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
    </ScrollView>